Create chefs resources and add authentication

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,28 +4,28 @@
     Share your recipes with the world!
   </h2>
   
-  <%= link_to "Sign Up", "", class: 'btn btn-lg btn-success' %>
+  <%= link_to "Sign Up", register_path, class: 'btn btn-lg btn-success' %>
 </div>
 <div class="row">
   <div class="col-md-4">
     <h3 class="midrow">
-      View Recipes as Guest User
+      View Recipes as Guest
     </h3>
     <h2 class="left">Browse and view recipes as a guest and sign up later.</h2>
-    <p><%= link_to "Browse Recipe Listings", recipes_path, class: 'btn btn-warning btn-small' %></p>
+    <p><%= link_to "Browse Recipes", recipes_path, class: 'btn btn-warning btn-small' %></p>
   </div>
   <div class="col-md-4">
     <h3 class="midrow">
-      View Recipes as Guest User
+      Sign In to Your Account
     </h3>
-    <h2 class="left">Browse and view recipes as a guest and sign up later.</h2>
-    <p><%= link_to "Browse Recipe Listings", recipes_path, class: 'btn btn-warning btn-small' %></p>
+    <h2 class="left">Add or update recipes, like your favorites, and more!</h2>
+    <p><%= link_to "Sign In", login_path, class: 'btn btn-warning btn-small' %></p>
   </div>
   <div class="col-md-4">
     <h3 class="midrow">
-      View Recipes as Guest User
+      View Recipes as Guest
     </h3>
     <h2 class="left">Browse and view recipes as a guest and sign up later.</h2>
-    <p><%= link_to "Browse Recipe Listings", recipes_path, class: 'btn btn-warning btn-small' %></p>
+    <p><%= link_to "Browse Recipes", recipes_path, class: 'btn btn-warning btn-small' %></p>
   </div>
 </div>
