--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
-  <div class="col-md-10">
+  <div class="col-md-12">
     <% flash.each do |message_type, message| %>
-      <div class="alert alert-<%= message_type %>">
+      <div class="alert alert-<%= message_type %> center">
         <%= message %>
         <a class="close" data-dismiss="alert">&#215;</a>
       </div>
