--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,7 +3,9 @@
 <div class="row">
 
   <div class="col-md-8">
-    <%= link_to "Edit This Recipe", edit_recipe_path(@recipe), class: "btn btn-success pull-right" %>
+    <% if logged_in? and @recipe.chef == current_user %>
+      <%= link_to "Edit This Recipe", edit_recipe_path(@recipe), class: "btn btn-success pull-right" %>
+    <% end %>
     <h3><%= @recipe.summary %></h3>
     <div class="show_recipe">
       <%= image_tag(@recipe.picture.url, class: "gravatar") if @recipe.picture? %>
@@ -25,9 +27,9 @@
   </div>
   
   <div class="col-md-4 pull-right center">
-    <%= gravatar_for @recipe.chef, size: 200 %>
+    <%= link_to gravatar_for(@recipe.chef, size: 200), chef_path(@recipe.chef) %>
     <p>
-      <h5>Brought to you by: <%= @recipe.chef.chefname %></h5>
+      <h5>Brought to you by: <%= link_to @recipe.chef.chefname, chef_path(@recipe.chef) %></h5>
     </p>
   </div>
   
