--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -11,6 +11,8 @@
       <%= image_tag(@recipe.picture.url, class: "gravatar") if @recipe.picture? %>
     </div>
     <div class="well">
+      <p>Style(s): <%= render partial: @recipe.styles, spacer_template: 'shared/comma' %></p>
+      <p>Ingredients: <%= render partial: @recipe.ingredients, spacer_template: 'shared/comma' %></p>
       <p>
         <strong>Steps:</strong>
       </p>
