Clean up UI/CSS

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -23,8 +23,12 @@
     <div class="col-md-6 well">
       <h4><%= link_to recipe.name, recipe_path(recipe) %></h4>
       <p>Summary: <%= recipe.summary %></p>
-      <p>Style(s): <%= render partial: recipe.styles, spacer_template: 'shared/comma' %></p>
-      <p>Ingredients: <%= render partial: recipe.ingredients, spacer_template: 'shared/comma' %></p>
+      <% if recipe.styles.any? %>
+        <p>Style(s): <%= render partial: recipe.styles, spacer_template: 'shared/comma' %></p>
+      <% end %>
+      <% if recipe.ingredients.any? %>
+        <p>Ingredients: <%= render partial: recipe.ingredients, spacer_template: 'shared/comma' %></p>
+      <% end %>
       <p>
         <span class="quiet"><small>Updated <%= time_ago_in_words(recipe.updated_at) %> ago, </small></span>
         <span class="quiet"><small>Created <%= time_ago_in_words(recipe.created_at) %> ago</small></span>
