--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -11,8 +11,12 @@
       <%= image_tag(@recipe.picture.url, class: "gravatar") if @recipe.picture? %>
     </div>
     <div class="well">
-      <p>Style(s): <%= render partial: @recipe.styles, spacer_template: 'shared/comma' %></p>
-      <p>Ingredients: <%= render partial: @recipe.ingredients, spacer_template: 'shared/comma' %></p>
+      <% if @recipe.styles.any? %>
+        <p>Style(s): <%= render partial: @recipe.styles, spacer_template: 'shared/comma' %></p>
+      <% end %>
+      <% if @recipe.ingredients.any? %>
+        <p>Ingredients: <%= render partial: @recipe.ingredients, spacer_template: 'shared/comma' %></p>
+      <% end %>
       <p>
         <strong>Steps:</strong>
       </p>
